{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "aea86436-c42e-b155-c98c-e0b6a59ed759",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "andlanc-test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0924557e03b326282",
            "associate_with_private_ip": "10.1.0.50",
            "association_id": "eipassoc-04852b7abae6f5602",
            "domain": "vpc",
            "id": "eipalloc-0924557e03b326282",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0783826f2d1f618da",
            "private_dns": "ip-10-1-0-50.ec2.internal",
            "private_ip": "10.1.0.50",
            "public_dns": "ec2-3-212-48-188.compute-1.amazonaws.com",
            "public_ip": "3.212.48.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.andlanc-internet-gateway",
            "aws_network_interface.andlanc-nic",
            "aws_security_group.andlanc-allow-web-traffic",
            "aws_subnet.andlanc-subnet",
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "andlanc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:684673970544:instance/i-0c4ae755c60ffeb14",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4ae755c60ffeb14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "andlanc_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0783826f2d1f618da"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0783826f2d1f618da",
            "private_dns": "ip-10-1-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.50",
            "public_ip": "3.212.48.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0945ea2f678ff65d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfcba17eece3f7da",
            "tags": {
              "Name": "andlanc"
            },
            "tags_all": {
              "Name": "andlanc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0698b8c796431c6b2"
            ]
          },
          "dependencies": [
            "aws_network_interface.andlanc-nic",
            "aws_security_group.andlanc-allow-web-traffic",
            "aws_subnet.andlanc-subnet",
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "andlanc-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:internet-gateway/igw-07487b22028bf53d5",
            "id": "igw-07487b22028bf53d5",
            "owner_id": "684673970544",
            "tags": {
              "Name": "andlanc-internet-gateway"
            },
            "tags_all": {
              "Name": "andlanc-internet-gateway"
            },
            "vpc_id": "vpc-0526aed02332e09be"
          },
          "dependencies": [
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "andlanc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:network-interface/eni-0783826f2d1f618da",
            "id": "eni-0783826f2d1f618da",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:3c:fa:ea:72:55",
            "owner_id": "684673970544",
            "private_ip": "10.1.0.50",
            "private_ip_list": [
              "10.1.0.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0698b8c796431c6b2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfcba17eece3f7da"
          },
          "dependencies": [
            "aws_security_group.andlanc-allow-web-traffic",
            "aws_subnet.andlanc-subnet",
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "andlanc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:route-table/rtb-0e00444a54bc9ad61",
            "id": "rtb-0e00444a54bc9ad61",
            "owner_id": "684673970544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07487b22028bf53d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "andlanc-route-table"
            },
            "tags_all": {
              "Name": "andlanc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0526aed02332e09be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.andlanc-internet-gateway",
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "andlanc-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2f01a66d53f0e4b",
            "route_table_id": "rtb-0e00444a54bc9ad61",
            "subnet_id": "subnet-0dfcba17eece3f7da"
          },
          "dependencies": [
            "aws_internet_gateway.andlanc-internet-gateway",
            "aws_route_table.andlanc-route-table",
            "aws_subnet.andlanc-subnet",
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "andlanc-allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:security-group/sg-0698b8c796431c6b2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0698b8c796431c6b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "684673970544",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "andlanc-allow-web-traffic"
            },
            "tags_all": {
              "Name": "andlanc-allow-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0526aed02332e09be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "andlanc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:subnet/subnet-0dfcba17eece3f7da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcba17eece3f7da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684673970544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "andlanc-subnet"
            },
            "tags_all": {
              "Name": "andlanc-subnet"
            },
            "vpc_id": "vpc-0526aed02332e09be"
          },
          "dependencies": [
            "aws_vpc.andlanc-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "andlanc-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:684673970544:vpc/vpc-0526aed02332e09be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fe9e4c9327874b72",
            "default_route_table_id": "rtb-0f13e29d34de18dcc",
            "default_security_group_id": "sg-01a6f39936bbf6cf0",
            "dhcp_options_id": "dopt-0e8b7c901c75c90bb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0526aed02332e09be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f13e29d34de18dcc",
            "owner_id": "684673970544",
            "tags": {
              "Name": "andlanc-vpc"
            },
            "tags_all": {
              "Name": "andlanc-vpc"
            }
          }
        }
      ]
    }
  ]
}